--- a/app/templates/employee_list.html
+++ b/app/templates/employee_list.html
@@ -1,44 +1,52 @@
 {% extends 'base.html' %}
 
-
 {% block styles %}
     <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/large_table.css') }}">
 {% endblock %}
 
-
 {% block main %}
-    <div class="page-container">
-        <div class="list-table highlightable page-card" style="max-width: 1000px;">
-            <div class="table-label">
-                <h3>Employees</h3>
-                {% if current_user.is_authenticated and current_user.is_admin %}
-                    <a href="{{ url_for('main.create_employee') }}" class="btn btn-success" role="button">Create</a>
-                {% endif %}
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-10"> <!-- Adjust the width by changing the col-md-* class -->
+                <div class="card">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h3>Employees</h3>
+                        {% if current_user.is_authenticated and current_user.is_admin %}
+                            <a href="{{ url_for('main.create_employee') }}" class="btn btn-success btn-block mb-2" role="button">
+                                <img src="{{ url_for('static', filename='images/add-user.png') }}" alt="Add" style="width: 24px; height: 24px;">
+                            </a>
+                        {% endif %}
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>First Name</th>
+                                    <th>Last Name</th>
+                                    <th>Title</th>
+                                    <th>Reports To</th>
+                                    <th>Username</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for employee in employees %}
+                                    <tr onclick="window.location.href='{{ url_for('main.employee_details', employee_id=employee.employee_id) }}';">
+                                        <td>{{ employee.employee_id }}</td>
+                                        <td>{{ employee.first_name }}</td>
+                                        <td>{{ employee.last_name }}</td>
+                                        <td>{{ employee.title }}</td>
+                                        <td>{{ employee.reports_to_name }}</td>
+                                        <td>{{ employee.username }}</td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <table>
-                <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                    <th>Title</th>
-                    <th>Reports To</th>
-                    <th>Username</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for employee in employees %}
-                    <tr onclick="window.location.href='{{ url_for('main.employee_details', employee_id=employee.employee_id) }}';">
-                        <td>{{ employee.employee_id }}</td>
-                        <td>{{ employee.first_name }}</td>
-                        <td>{{ employee.last_name }}</td>
-                        <td>{{ employee.title }}</td>
-                        <td>{{ employee.reports_to_name }}</td>
-                        <td>{{ employee.username }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
         </div>
     </div>
 {% endblock %}
