--- a/app/templates/employee.html
+++ b/app/templates/employee.html
@@ -1,122 +1,103 @@
 {% extends 'base.html' %}
 
-
 {% block styles %}
     <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/item.css') }}">
 {% endblock %}
 
-
 {% block main %}
-    <div class="page-container">
-    <div class="item-card page-card" style="margin: auto">
-        <div class="card-header-container">
-            <h1 id="objectName">{% if employee %}{{ employee.first_name }}{% else %}Create Employee{% endif %}</h1>
-            {% if employee and current_user and current_user.is_admin %}
-                <div class="delete-button-container">
-                    <button type="button" id="deleteButton" class="btn btn-danger shadow-none"
-                            onclick="deleteObject('{{ url_for('api.delete_employee', employee_id=employee.employee_id) }}')">
-                        Delete
-                    </button>
-                    <button type="button" id="cancelDeleteButton" class="btn btn-secondary shadow-none"
-                            style="display: none;"
-                            onclick="cancelDelete()">
-                        Cancel
-                    </button>
-                </div>
-            {% endif %}
-        </div>
-        <form id="objectForm">
-            <input type="hidden" name="csrf_token" id="csrf_token" value="{{ csrf_token() }}">
-            <div class="item-details">
-                {% if current_user and current_user.is_admin %}
-                <div class="detail">
-                    <label for="name" class="label">First Name:</label>
-                    <input type="text" id="name" name="first_name" value="{{ (employee.first_name if employee) or '' }}"
-                           {% if employee %}disabled{% endif %}>
-                </div>
-                <div class="detail">
-                    <label for="last_name" class="label">Last Name:</label>
-                    <input type="text" id="last_name" name="last_name"
-                           value="{{ (employee.last_name if employee) or '' }}" {% if employee %}disabled{% endif %}>
-                </div>
-                <div class="detail">
-                    <label for="title" class="label">Title:</label>
-                    <input type="text" id="title" name="title" value="{{ (employee.title if employee) or '' }}"
-                           {% if employee %}disabled{% endif %}>
-                </div>
-                <div class="detail">
-                    <label for="reports_to_choices" class="label">Reports to:</label>
-                    <select name="reports_to" id="reports_to_choices" {% if employee %}disabled{% endif %}>
-                        <option value=""> </option>
-                        {% for reports_to_choice in reports_to_choices %}
-                            {% if (employee and employee.employee_id != reports_to_choice.employee_id) or not employee%}
-                            <option value="{{ reports_to_choice.employee_id }}"
-                                    {% if employee and employee.reports_to == reports_to_choice.employee_id %}selected{% endif %}>
-                                {{ reports_to_choice.first_name }} {{ reports_to_choice.last_name }}
-                            </option>
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h1 id="objectName">{% if employee %}{{ employee.first_name }}{% else %}Create Employee{% endif %}</h1>
+                        {% if employee and current_user and current_user.is_admin %}
+                            <div>
+                                <button type="button" id="deleteButton" class="btn btn-danger"
+                                        onclick="deleteObject('{{ url_for('api.delete_employee', employee_id=employee.employee_id) }}')">
+                                    Delete
+                                </button>
+                                <button type="button" id="cancelDeleteButton" class="btn btn-secondary"
+                                        style="display: none;"
+                                        onclick="cancelDelete()">
+                                    Cancel
+                                </button>
+                            </div>
+                        {% endif %}
+                    </div>
+                    <div class="card-body">
+                        <form id="objectForm">
+                            <input type="hidden" name="csrf_token" id="csrf_token" value="{{ csrf_token() }}">
+                            <div class="mb-3">
+                                <label for="first_name" class="form-label">First Name:</label>
+                                <input type="text" class="form-control" id="first_name" name="first_name" value="{{ (employee.first_name if employee) or '' }}"
+                                       {% if employee %}disabled{% endif %}>
+                            </div>
+                            <div class="mb-3">
+                                <label for="last_name" class="form-label">Last Name:</label>
+                                <input type="text" class="form-control" id="last_name" name="last_name"
+                                       value="{{ (employee.last_name if employee) or '' }}" {% if employee %}disabled{% endif %}>
+                            </div>
+                            <div class="mb-3">
+                                <label for="title" class="form-label">Title:</label>
+                                <input type="text" class="form-control" id="title" name="title" value="{{ (employee.title if employee) or '' }}"
+                                       {% if employee %}disabled{% endif %}>
+                            </div>
+                            <div class="mb-3">
+                                <label for="reports_to_choices" class="form-label">Reports to:</label>
+                                <select class="form-select" name="reports_to" id="reports_to_choices" {% if employee %}disabled{% endif %}>
+                                    <option value=""> </option>
+                                    {% for reports_to_choice in reports_to_choices %}
+                                        {% if (employee and employee.employee_id != reports_to_choice.employee_id) or not employee %}
+                                            <option value="{{ reports_to_choice.employee_id }}"
+                                                    {% if employee and employee.reports_to == reports_to_choice.employee_id %}selected{% endif %}>
+                                                {{ reports_to_choice.first_name }} {{ reports_to_choice.last_name }}
+                                            </option>
+                                        {% endif %}
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="username" class="form-label">Username:</label>
+                                <input type="text" class="form-control" id="username" name="username"
+                                       value="{{ (employee.username if employee) or '' }}"
+                                       {% if employee %}disabled{% endif %}>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password:</label>
+                                <input type="password" class="form-control" id="password" name="password" value=""
+                                       {% if employee %}disabled{% endif %}>
+                            </div>
+                            {% if current_user.is_authenticated and current_user.is_admin %}
+                                <div class="mb-3 form-check">
+                                    <input type="checkbox" class="form-check-input" id="is_admin" name="is_admin"
+                                           {% if employee and employee.is_admin %}checked{% endif %}
+                                           {% if employee %}disabled{% endif %}>
+                                    <label class="form-check-label" for="is_admin">Admin</label>
+                                </div>
                             {% endif %}
-                        {% endfor %}
-                    </select>
+                            <input type="hidden" id="objectId" name="employee_id" value="{{ (employee.employee_id if employee) }}" disabled readonly>
+                            <p id="responseText"></p>
+                            <div class="d-flex justify-content-between">
+                                {% if current_user.is_authenticated %}
+                                    {% if employee %}
+                                        <button type="button" id="cancelButton" class="btn btn-secondary"
+                                                style="display: none;"
+                                                onclick="cancelEdit(`{{ url_for("api.get_employee", employee_id=employee.employee_id) }}`)">
+                                            Cancel
+                                        </button>
+                                    {% endif %}
+                                    <button type="button" id="editButton" class="btn btn-success w-100"
+                                            onclick="toggleEdit('{% if employee %}{{ url_for("api.update_employee", employee_id=employee.employee_id) }}{% else %}{{ url_for("api.create_employee") }}{% endif %}')">
+                                        {% if employee %}Edit{% else %}Create{% endif %}
+                                    </button>
+                                {% endif %}
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                {% elif employee %}
-                    <div class="detail">
-                        <button id="name" value="{{ employee.first_name }}" style="display: none;"></button>
-                        <label class="label">First Name:</label>
-                        <p class="not-editable">{{ employee.first_name }}</p>
-                    </div>
-                    <div class="detail">
-                        <label class="label">Last Name:</label>
-                        <p class="not-editable">{{ employee.last_name }}</p>
-                    </div>
-                    <div class="detail">
-                        <label class="label">Title:</label>
-                        <p class="not-editable">{{ employee.title }}</p>
-                    </div>
-                    <div class="detail">
-                        <label class="label">Reports to:</label>
-                        <p class="not-editable">{{ employee.reports_to_name or '' }}</p>
-                    </div>
-                {% endif %}
-                <div class="detail">
-                    <label for="username" class="label">Username:</label>
-                    <input type="text" id="username" name="username"
-                           value="{{ (employee.username if employee) or '' }}"
-                           {% if employee %}disabled{% endif %}>
-                </div>
-                <div class="detail">
-                    <label for="password" class="label">Password:</label>
-                    <input type="text" id="password" name="password" value=""
-                           {% if employee %}disabled{% endif %}>
-                </div>
-                {% if current_user.is_authenticated and current_user.is_admin %}
-                    <div class="detail">
-                        <label for="is_admin" class="label">Admin:</label>
-                        <input type="checkbox" id="is_admin" name="is_admin"
-                               {% if employee and employee.is_admin %}checked{% endif %}
-                               {% if employee %}disabled{% endif %}>
-                    </div>
-                {% endif %}
             </div>
-            <input type="hidden" id="objectId" name="employee_id" value="{{ (employee.employee_id if employee) }}"
-                   disabled readonly>
-            <p id="responseText"></p>
-            <div class="primary-action-container">
-                {% if current_user.is_authenticated %}
-                    {% if employee %}
-                        <button type="button" id="cancelButton" class="btn btn-secondary shadow-none"
-                                style="display: none;"
-                                onclick="cancelEdit(`{{ url_for("api.get_employee", employee_id=employee.employee_id) }}`)">
-                            Cancel
-                        </button>
-                    {% endif %}
-                    <button type="button" id="editButton" class="btn btn-success shadow-none"
-                            onclick="toggleEdit('{% if employee %}{{ url_for("api.update_employee", employee_id=employee.employee_id) }}{% else %}{{ url_for("api.create_employee") }}{% endif %}')">
-                        {% if employee %}Edit{% else %}Create{% endif %}
-                    </button>
-                {% endif %}
-            </div>
-        </form>
-    </div>
+        </div>
     </div>
     {% if current_user.is_authenticated %}
         <script src="{{ url_for('static', filename='javascript/update_form.js') }}"></script>
